--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Aula11</title>
+  <title>Aula_11</title>
 
   <style>
     /* Gradiente animado de fundo */
@@ -27,7 +27,7 @@
       position: relative;
       border: 2px solid rgba(216,180,254,0.5);
        backdrop-filter: blur(10px);
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       z-index: 1;
       overflow: hidden;
     }
